--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "format": "biome format --write ."
   },
   "dependencies": {
     "@farcaster/miniapp-core": "^0.3.6",
@@ -35,11 +36,7 @@
   },
   "packageManager": "pnpm@10.6.3+sha512.bb45e34d50a9a76e858a95837301bfb6bd6d35aea2c5d52094fa497a467c43f5c440103ce2511e9e0a2f89c3d6071baac3358fc68ac6fb75e2ceb3d2736065e6",
   "pnpm": {
-    "ignoredBuiltDependencies": [
-      "@biomejs/biome"
-    ],
-    "onlyBuiltDependencies": [
-      "@biomejs/biome"
-    ]
+    "ignoredBuiltDependencies": ["@biomejs/biome"],
+    "onlyBuiltDependencies": ["@biomejs/biome"]
   }
 }
