--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@neynar/react": "^1.2.8",
     "@tanstack/react-query": "^5.64.2",
     "@upstash/redis": "^1.35.1",
+    "lucide-react": "^0.539.0",
     "next": "14.2.6",
     "react": "^18",
     "react-dom": "^18",
