--- a/contracts/foundry.toml
+++ b/contracts/foundry.toml
@@ -11,7 +11,13 @@ optimizer = true
 optimizer_runs = 20000
 via_ir = true
 
-ignored_warnings_from = ["node_modules", "lib", "src/deploy", "src/scripts", "src/test"]
+ignored_warnings_from = [
+    "node_modules",
+    "lib",
+    "src/deploy",
+    "src/scripts",
+    "src/test",
+]
 
 evm_version = "prague"
 
@@ -30,20 +36,6 @@ ffi = true
 ast = true
 build_info = true
 extra_output = ["storageLayout"]
-
-# Documentation generation configuration
-[doc]
-title = "Boop Documentation"
-out = "docs"
-# Ignore everything except the boop directory
-ignore = [
-    "src/deploy/**/*.sol",
-    "src/mocks/**/*.sol",
-    "src/scripts/**/*.sol",
-    "src/randomness/**/*.sol",
-    "src/test/**/*.sol",
-    "src/*.sol"
-]
 
 [profile.ci]
 # Gives super verbose output by default (-vvvv) when running tests on CI.
